Added secured communication for ec2 by adding known host

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           IMAGE_NAME: demo-apis  # Optional: hardcode the image name or store it as a secret
-          
+
       # Step 4: SSH into EC2 and deploy the updated image
       - name: Deploy to Minikube on EC2
         uses: appleboy/ssh-action@v0.1.1
@@ -32,6 +32,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           script: |
             echo "Pulling updated image from DockerHub..."
             docker pull ${{ secrets.DOCKER_USERNAME }}/demo-apis:$(git rev-list --count HEAD)
