--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,18 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           IMAGE_NAME: demo-apis  # Optional: hardcode the image name or store it as a secret
 
+      - name: Create SSH Key File
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" > /tmp/ssh_key.pem
+          chmod 400 /tmp/ssh_key.pem  # Ensure correct permissions
+      
       # Step 4: SSH into EC2 and deploy the updated image
       - name: Deploy to Minikube on EC2
         uses: appleboy/ssh-action@v0.1.1
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          username: ec2-user
+          key_path: /tmp/ssh_key.pem  # Use the created key file path
           script: |
             echo "Pulling updated image from DockerHub..."
             docker pull ${{ secrets.DOCKER_USERNAME }}/demo-apis:$(git rev-list --count HEAD)
@@ -40,3 +45,5 @@ jobs:
             kubectl set image deployment/demo-api-service-deployment demo-apis=${{ secrets.DOCKER_USERNAME }}/demo-apis:$(git rev-list --count HEAD)
 
             echo "Deployment updated with latest image!"
+          
+          debug: true
